# topo

./: .gitignore  AGENTS.md  CLAUDE_FEEDBACK.md  CODEX_FEEDBACK.md  Cargo.toml  DESIGN.md  FEEDBACK.md  FEEDBACK2.md  MTLS_PUBKEY_PINNING.md  PERF.md  PHASE_0_5_FEEDBACK.md  PLAN.md  README.md  TODO.md  codex_final_audit.md  feedback.md  plan.md
.cargo/: config.toml
.githooks/: pre-commit
archive/: SYNC_ROUND_DESIGN.md
docs/: CLI_BOOTSTRAP_TEST_REALISM_EXECUTION_PLAN.md  CLI_EXPANSION_FEEDBACK.md  CONTRIBUTING.md  CREATE_EVENT_SYNC_SEMANTICS_EXECUTION_PLAN.md  CREATE_EVENT_SYNC_SEMANTICS_FINDINGS.md  CURRENT_RUNTIME_DIAGRAM.md  DESIGN.md  DESIGN_DIAGRAMS.md  DESIGN_OMISSIONS_AUDIT.md  FIXED_LENGTH_FIELDS_EXECUTION_PLAN.md  FLOW_SIMPLIFICATION_TODO.md  HOLEPUNCH_TEST_REALISM_EXECUTION_PLAN.md  IDENTITY_RENAME_PLAN.md  INDEX.md  ISSUE_8_SAVEPOINT_CASCADE_REGRESSION.md  LOW_MEM_PERF_ANALYSIS.md  NETWORKING_EVENT_BOUNDARY_OPTIONS.md  OPTION_B_NETWORK_BOUNDARY_IMPLEMENTATION_PLAN.md  OPTION_B_NETWORK_BOUNDARY_PHASE_6_HARDENING_PLAN.md  PEER_NEW_IN_WORKSPACE_EXECUTION_PLAN.md  PERF.md  PERF_LOWMEM_REGIMEN.md  PHASE_7_LOGIC_FIXES.md  PLAN-collapse-single-tenant.md  PLAN.md  QUIC_HOLEPUNCH_PLAN.md  SYNC_GRAPH_PERF_PLAN.md  codex_final_audit.md
scripts/: bootstrap.sh  check_boundary_imports.sh  check_bridge_conformance.py  check_projector_tla_bijection.py  check_projector_tla_conformance.py  check_tcl_conformance.py  install_sim_deps.sh  run_lowmem_proxy.sh  run_lowmem_regimen.sh  run_perf_serial.sh  run_scenario_flake_hunt.sh
src/: NEGENTROPY_SQLITE_PLAN.md  assert.rs  discovery.rs  event_pipeline.rs  identity.rs  identity_ops.rs  interactive.rs  invite_link.rs  lib.rs  main.rs  node.rs  replication.rs  service.rs  testutil.rs  transport_identity.rs  tuning.rs  upnp.rs
tests/: README.md  canonical_wire_tests.rs  cheat_proof_realism_test.rs  cli_test.rs  file_throughput.rs  file_throughput_test.rs  fixed_layout_tests.rs  holepunch_test.rs  interactive_test.rs  local_echo_test.rs  low_mem_large_trustset_test.rs  low_mem_test.rs  mdns_smoke.rs  mdns_smoke_test.rs  netns_cheat_proof_realism_test.sh  netns_nat_test.sh  perf_test.rs  projectors.rs  rpc_test.rs  scenario_test.rs  sync_graph_test.rs  (+3 more)
(+557 files in other folders)
