[package]
name = "topo"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
nom = "7.1"
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
blake2 = "0.10"
base64 = "0.21"
rcgen = "0.12"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
curve25519-dalek = "4"
aes-gcm = "0.10"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
negentropy = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rustls-webpki = "0.103.9"
x509-parser = "0.16"

tempfile = "3"
rustyline = "14"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = { version = "0.11", optional = true }

[features]
default = ["discovery"]
discovery = ["mdns-sd"]

[[bin]]
name = "topo"
path = "src/main.rs"

[dev-dependencies]

# Crypto deps are orders of magnitude slower in debug mode; optimize them even in tests.
[profile.dev.package.ed25519-dalek]
opt-level = 3

[profile.dev.package.curve25519-dalek]
opt-level = 3

[profile.dev.package.blake2]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.aes-gcm]
opt-level = 3

[profile.dev.package.aes]
opt-level = 3
